new_tests/semantics/type/bad/041_FS3.cm

for(def i:Int in 'c'..'a') {}
